kubernetes/cka_preparation/2-containers.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: 2-containers
  name: 2-conatiners
spec:
      containers:
      - image: nginx
        name: nginx
      - image: redis
        name: redis
