kubernetes/cka_preparation/4-container.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: 4-containers
  name: 4-containers
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  strategy: {}
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx
        name: nginx
      - image: redis
        name: redis
