kubernetes/cka_preparation/4-containers.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: 4-containers
  name: 4-conatiners
spec:
      containers:
      - image: nginx
        name: nginx-1
      - image: redis
        name: redis-1
      - image: nginx
        name: nginx-2
      - image: redis
        name: redis-2
