kubernetes/cka_preparation/busybox-test.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: busyboxnotallowed
  name: busybox-test
spec:
      containers:
      - image: busybox
        name: busybox-test
        command: ["sleep","3600"]
