kubernetes/cka_preparation/busybox.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox-1
spec:
  containers:
  - image: busybox:1.28.4
    command: ["sleep", "60"]
    name: busybox
  restartPolicy: Always
