kubernetes/cka_preparation/nginx-secret-env-variable.yaml
apiVersion: v1
kind: Pod
metadata:
 labels:
   app: secretpod
 name: nginx-from-env-variable
spec:
  containers:
  - name: nginxsecretcontainer
    image: nginx
