kubernetes/cka_preparation/nginx-secret-volume-file.yaml
apiVersion: v1
kind: Pod
metadata:
 labels:
   app: secretpod
 name: nginxwithsecret-1
spec:
  containers:
  - name: mypod
    image: redis
    volumeMounts:
    - name: testvol
      mountPath: "/tmp/ankit"
      readOnly: true
  volumes:
  - name: testvol
    secret:
     secretName: mysecret
