kubernetes/cka_preparation/nginx-with-toleration.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: nginx-2
  name: nginx-2
spec:
 tolerations:
 - key: TestdeployNopods
   operator: Exists
   effect: NoSchedule
 containers:
 - image: nginx
   name: nginx-test
