kubernetes/cka_preparation/nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: nginx-server
  name: nginx-4
spec:
      containers:
      - image: nginx
        name: nginx
