kubernetes/cka_preparation/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
spec:
  podSelector:
    matchLabels:
      networkpolicy: test
  ingress:
  - from:
    - podSelector:
        matchLabels:
          access: "granted"
  egress:
  - to:
    - podSelector:
        matchLabels:
          access: "granted"
